syntax = "proto3";

package smartdisk;

option go_package = "github.com/Maruqes/512SvMan/api/proto/smartdisk;proto";

enum SelfTestType {
  SELF_TEST_TYPE_UNSPECIFIED = 0;
  SELF_TEST_TYPE_SHORT = 1;
  SELF_TEST_TYPE_EXTENDED = 2;
}

message SmartInfoRequest {
  string device = 1;
}

message SelfTestRequest {
  string device = 1;
  SelfTestType type = 2;
}

message SelfTestResponse {
  string message = 1;
}

message ATAErrorEntry {
  int64 error_number = 1;
  int64 lifetime_hours = 2;
  int64 lba = 3;
  int64 lba_first_error = 4;
  string status = 5;
  string error_message = 6;
  string operation = 7;
  int64 sector_count = 8;
  int64 powered_up_hours = 9;
}

message NVMeErrorEntry {
  int64 error_count = 1;
  int64 sqid = 2;
  int64 cid = 3;
  int64 status_field = 4;
  int64 param_error_location = 5;
  int64 lba = 6;
  int64 nsid = 7;
  int64 vs = 8;
  int64 trk = 9;
  string message = 10;
  int64 submission_timestamp = 11;
}

message SelfTestResult {
  string type = 1;
  string status = 2;
  bool passed = 3;
  int64 remaining_percent = 4;
  int64 lifetime_hours = 5;
}

message SmartDiskInfo {
  string device = 1;
  string model = 2;
  string serial = 3;
  string firmware = 4;
  int64 capacity_bytes = 5;
  int64 power_on_hours = 6;
  int64 power_cycle_count = 7;
  int64 temperature_c = 8;
  int64 temperature_max = 9;
  int64 temperature_min = 10;
  bool smart_passed = 11;
  int64 reallocated_sectors = 12;
  int64 reallocated_event_count = 13;
  int64 pending_sectors = 14;
  int64 offline_uncorrectable = 15;
  int64 raw_read_error_rate = 16;
  int64 seek_error_rate = 17;
  int64 spin_retry_count = 18;
  int64 spin_up_time_ms = 19;
  int64 start_stop_count = 20;
  int64 load_cycle_count = 21;
  int64 crc_error_count = 22;
  int64 uncorrectable_read_errors = 23;
  int64 command_timeouts = 24;
  int64 write_error_rate = 25;
  int64 end_to_end_errors = 26;
  int64 reported_uncorrectable = 27;
  int64 high_fly_writes = 28;
  int64 airflow_temperature_c = 29;
  int64 hardware_ecc_recovered = 30;
  int64 media_errors = 31;
  int64 percentage_used = 32;
  int64 available_spare = 33;
  int64 available_spare_threshold = 34;
  int64 critical_warning = 35;
  int64 data_units_read = 36;
  int64 data_units_written = 37;
  int64 host_read_commands = 38;
  int64 host_write_commands = 39;
  int64 unsafe_shutdowns = 40;
  int64 error_log_count = 41;
  int64 device_error_count = 42;
  repeated ATAErrorEntry last_ata_errors = 43;
  repeated NVMeErrorEntry last_nvme_errors = 44;
  repeated SelfTestResult self_tests = 45;
  string health_status = 46;
  string physical_problem_risk = 47;
  string recommended_action = 48;
  string smartctl_error = 49;
}

message SelfTestProgress {
  string device = 1;
  string status = 2;
  int64 progress_percent = 3;
  int64 remaining_percent = 4;
}

message CancelSelfTestRequest {
  string device = 1;
}

message ForceReallocRequest {
  string device = 1;
}

message ForceReallocResponse {
  string message = 1;
}

message ForceReallocProgress {
  string device = 1;
  string status = 2; // running, completed, error, idle
  int64 progress_percent = 3;
  string message = 4;
  string error = 5;
}

message ForceReallocProgressList {
  repeated ForceReallocProgress jobs = 1;
}

message Empty {
}

// Provides SMART/health information for disks on the slave.
service SmartDiskService {
  rpc GetSmartInfo(SmartInfoRequest) returns (SmartDiskInfo);
  rpc RunSelfTest(SelfTestRequest) returns (SelfTestResponse);
  rpc GetSelfTestProgress(SmartInfoRequest) returns (SelfTestProgress);
  rpc CancelSelfTest(CancelSelfTestRequest) returns (SelfTestResponse);
  rpc StartForceReallocation(ForceReallocRequest) returns (ForceReallocResponse);
  rpc GetForceReallocationProgress(ForceReallocRequest) returns (ForceReallocProgress);
  rpc GetAllForceReallocationProgress(Empty) returns (ForceReallocProgressList);
  rpc CancelForceReallocation(ForceReallocRequest) returns (ForceReallocResponse);
}
